feat: 전역 예외 처리 아키텍처 도입 및 에러 코드 중앙 관리
- ErrorCode: 예외 상태와 메시지를 하나의 Enum으로 통합 정의 (global/exception)
- BusinessException: RuntimeException을 상속받는 단일 비즈니스 예외 클래스 구축
- ErrorResponse & GlobalControllerAdvice: 예외 발생 시 일관된 JSON 규격과 HTTP 상태 코드 반환을 위한 전역 핸들러 추가
- 기존 코드의 예외(IllegalArgumentException 등) 대신 일관된 표준 BusinessException을 던지도록 리팩터링